* src/html/classic/css/gsa-style.css: Fix 1px bug for icon menues. Sometimes the icon drop down menu was shown 1px to low which resulted in a flickering and inaccessible menu.
git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@25042 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/classic/css/gsa-style.css
+++ b/src/html/classic/css/gsa-style.css
@@ -980,7 +980,7 @@ select[multiple] {
   display: none;
   padding: 0;
   left: 0px;
-  top: 6px;
+  top: 5px;
   z-index: 5;
   list-style: none;
   font-size: 10px;
